MET-2901: Some of the SQ bugs.